crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_range_to.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Probability {
    fn parse(p: &mut css_parse::Parser<'a>) -> css_parse::Result<Self> {
        use css_parse::Parse;
        let value = p.parse::<Number>()?;
        if let Ok(i) = std::convert::TryInto::<f32>::try_into(value) {
            if 1.0f32 < i {
                use ::css_parse::ToSpan;
                Err(::css_parse::diagnostics::NumberTooLarge(1.0f32, value.to_span()))?
            }
        }
        Ok(Self { value: value })
    }
}
