crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_struct_with_single_generic.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a, T> ::css_parse::Parse<'a> for Wrapper<T>
where
    T: ::css_parse::Parse<'a>,
    T: ::css_parse::Peek<'a>,
{
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let value = p.parse::<T>()?;
        return Ok(Self { value: value });
    }
}
