crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_with_both_state_and_stop.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for RuleContent {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let stop = p.set_stop(KindSet::new(&[Kind::RightBrace]));
        let state = p.set_state(State::InRule);
        let v0 = p.parse::<Vec<String>>()?;
        p.set_state(state);
        p.set_stop(stop);
        return Ok(Self { declarations: v0 });
    }
}
