crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_with_state_attribute.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for ValueInState {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let state = p.set_state(State::InValue);
        let v0 = p.parse::<String>()?;
        p.set_state(state);
        return Ok(Self { content: v0 });
    }
}
