crates/csskit_derives/src/test/snapshots/csskit_derives__test__test_parse__parse_with_stop_kindset_attribute.snap
---
source: crates/csskit_derives/src/test/test_parse.rs
expression: pretty
---
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for StopOnBlockEnd {
    fn parse<I>(p: &mut css_parse::Parser<'a, I>) -> css_parse::Result<Self>
    where
        I: ::std::iter::Iterator<Item = ::css_parse::Cursor> + ::std::clone::Clone,
    {
        use css_parse::{Parse, Peek};
        let stop = p.set_stop(KindSet::BlockEnd);
        let v0 = p.parse::<Vec<String>>()?;
        p.set_stop(stop);
        return Ok(Self { declarations: v0 });
    }
}
